# opalvoip-ptlib

./: .cvsignore  .gitattributes  .gitignore  ChangeLog.txt  History.txt  Makefile  Makefile.in  ReadMe.MingW32.txt  ReadMe.txt  ReadMe_PortAudio.txt  ReadMe_QOS.txt  Readme.OS_Issues  config.sub  configure  configure.ac  configure.in  exclusions.txt  make_zip.bat  merge_from_stable.sh  ptlib.dxy  ptlib.m4  ptlib.pc.in  ptlib_2003.sln  ptlib_2005.sln  ptlib_2010.sln  ptlib_2012.sln  ptlib_2013.sln  ptlib_2015.sln  ptlib_2017.sln  ptlib_2019.sln  ptlib_cfg.dxy  ptlib_cfg.dxy.in  ptlib_debug.pc.in  ptlib_samples_2005.sln  ptlib_samples_2008.sln  ptlib_samples_2010.sln  ptlib_samples_2012.sln  ptlib_samples_2013.sln  ptlib_samples_2015.sln  ptlib_samples_2017.sln  (+15 more)
BarnardSnapshot1/: Makefile.in  configure  configure.ac  ptlib_samples_2005.sln
BarnardSnapshot1/make/: common.mak
LalandeBranch1/: Makefile.in  configure.ac  version.h
LalandeBranch1/include/: ptbuildopts.h.in
LalandeBranch1/make/: common.mak  lib.mak
LalandeBranch1/src/: Makefile
LalandeBranch2/make/: common.mak
LalandeBranch3/: configure  configure.ac
LalandeBranch3/make/: lib.mak
LalandeBranch3/src/: Makefile
LelandeBranch1/: configure  configure.ac  ptlib_samples_2008.sln  version.h
LelandeBranch1/include/: ptbuildopts.h.in
LelandeBranch1/make/: common.mak  plugins.mak  unix.mak
LelandeBranch1/src/: Makefile
WolfTag1/: configure  configure.ac  ptlib_2008.sln  ptlib_cfg.dxy.in  version.h
WolfTag1/include/: ptbuildopts.h.in  ptlib.h
WolfTag1/make/: common.mak  plugins.mak  ptbuildopts.mak.in
WolfTag1/plugins/: configure.in
debian/: changelog  control  libosspt-dev.install  libosspt.install  rules
include/: .cvsignore  ptbuildopts.h.in  ptbuildopts.h.in.in  ptlib.h  ptlib_config.h.in  ptlib_wx.h  pwlib.h  unistd.h
include/ptclib/: SignLanguageAnalyser.h  asnber.h  asner.h  asnper.h  cli.h  cypher.h  delaychan.h  dtmf.h  enum.h  ftp.h  gstreamer.h  guid.h  html.h  http.h  httpform.h  httpsvc.h  inetmail.h  inetprot.h  ipacl.h  jscript.h  lua.h  mediafile.h  memfile.h  mime.h  modem.h  paec.h  pasn.h  pdns.h  pffvdev.h  pils.h  pjson.h  pldap.h  pnat.h  podbc.h  portaudio.h  psasl.h  psnmp.h  psoap.h  psockbun.h  pssl.h  (+30 more)
include/ptlib/: args.h  array.h  atomic.h  bitwise_enum.h  channel.h  conchan.h  config.h  contain.h  contain.inl  critsec.h  devplugin.h  dict.h  dynalink.h  ethsock.h  file.h  filepath.h  icmpsock.h  id_generator.h  indchan.h  ipdsock.h  ipsock.h  ipxsock.h  lists.h  mail.h  mutex.h  notifier.h  notifier_ext.h  object.h  osutil.inl  pdirect.h  pfactory.h  pipechan.h  plugin.h  pluginmgr.h  pprocess.h  psharedptr.h  pstring.h  psync.h  ptime.h  pwavfile.h  (+27 more)
make/: .cvsignore  autoconf.mak  canonical.m4  common.mak  defaultgui.mak  gcc_filter.awk  gui.mak  lib.mak  motif.mak  my_macros.m4  plugins.mak  post.mak  pre.mak  ptbuildopts.mak.in  ptlib-config.in  ptlib.m4  ptlib.mak  ptlib_config.mak.in  pwlib.mak  qt.mak  toplevel.mak  unix.mak  xlib.mak
nbproject/: configurations.xml  project.xml
plugins/: .cvsignore  Makefile.in  ReadMe.txt  configure  configure.in
plugins/sound_alsa/: Makefile  sound_alsa.cxx  sound_alsa.h
plugins/sound_esd/: Makefile  sound_esd.cxx  sound_esd.h
plugins/sound_oss/: Makefile  sound_oss.cxx  sound_oss.h
plugins/sound_pulse/: Makefile  sound_pulse.cxx  sound_pulse.h
plugins/sound_shm/: Makefile  shmif.cpp  sound_shm.cxx  sound_shm.h
plugins/sound_sunaudio/: sound_sunaudio.cxx  sound_sunaudio.h
plugins/vidinput_avc/: Makefile  vidinput_avc.cxx  vidinput_avc.h
plugins/vidinput_bsd/: vidinput_bsd.cxx  vidinput_bsd.h
plugins/vidinput_dc/: Makefile  Makefile.in  video4dc1394.cxx  videoio1394dc.h
plugins/vidinput_v4l/: vidinput_v4l.cxx  vidinput_v4l.h
plugins/vidinput_v4l2/: Makefile  Makefile.in  vidinput_names.cxx  vidinput_names.h  vidinput_v4l2.cxx  vidinput_v4l2.h
pstring_change/: Makefile.in
pstring_change/make/: plugins.mak
ptlib.xcodeproj/: project.pbxproj  robertj.mode1v3  robertj.pbxuser
samples/: Makefile
samples/ODBC/: Makefile  odbc_2010.vcxproj  odbc_2012.vcxproj  odbc_2013.vcxproj  odbc_2015.vcxproj  odbc_2017.vcxproj  odbc_2019.vcxproj  odbctest.cxx  test.mdb
samples/StringTest/: Makefile  main.cxx  main.h
samples/ThreadSafe/: Makefile  ThreadSafe.dsp  ThreadSafe.vcproj  ThreadSafe_2005.vcproj  ThreadSafe_2008.vcproj  main.cxx  main.h  precompile.cxx
samples/address/: Makefile  local.cxx
samples/aggtest/: aggtest.vcproj  aggtest_2005.vcproj  aggtest_2008.vcproj  main.cxx  main.h  precompile.cxx  precompile.h
samples/asynctest/: Makefile  asynctest.cxx  asynctest_2005.vcproj  asynctest_2008.vcproj  asynctest_2010.vcxproj  asynctest_2012.vcxproj  asynctest_2013.vcxproj  asynctest_2015.vcxproj  asynctest_2017.vcxproj  asynctest_2019.vcxproj
samples/audio/: Makefile  audio.cxx  audio.h  audio_2010.vcxproj  audio_2012.vcxproj  audio_2013.vcxproj  audio_2015.vcxproj  audio_2017.vcxproj  audio_2019.vcxproj
samples/dnstest/: Makefile  dnstest.dsp  dnstest.vcproj  dnstest_2005.vcproj  dnstest_2008.vcproj  dnstest_2010.vcxproj  dnstest_2012.vcxproj  dnstest_2012.vcxproj.filters  dnstest_2013.vcxproj  dnstest_2015.vcxproj  dnstest_2015.vcxproj.filters  dnstest_2017.vcxproj  dnstest_2019.vcxproj  main.cxx  main.h  precompile.cxx
samples/dtmftest/: Makefile  dtmftest.vcproj  dtmftest_2005.vcproj  dtmftest_2008.vcproj  main.cxx  main.h  precompile.cxx  precompile.h  version.h
samples/emailtest/: Makefile  emailtest.vcproj  emailtest_20010.vcxproj  emailtest_2005.vcproj  emailtest_2008.vcproj  emailtest_2013.vcxproj  emailtest_2015.vcxproj  emailtest_2017.vcxproj  emailtest_2019.vcxproj  main.cxx  main.h  precompile.cxx  precompile.h  version.h
samples/ether/: Makefile  ether.cxx  ether_2008.vcproj  ether_2010.vcxproj  ether_2012.vcxproj  ether_2013.vcxproj  ether_2015.vcxproj  ether_2017.vcxproj  ether_2019.vcxproj
samples/factory/: Makefile  abstract.h  concrete.cxx  factory.dsp  factory.vcproj  (+5 more)
snapshot_2/: configure  version.h
src/: Makefile
tools/: get_revision.sh  release.sh
(+1472 files in other folders)
